2007-12-07  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	* gtk/gtkfilechooserdefault.c (shortcuts_reload_icons): Don't
	leak pixbufs.  (#502250, Yevgen Muntyan)

2007-12-06  Richard Hult  <richard@imendio.com>

	Merged from trunk:

	* gdk/quartz/gdkevents-quartz.c:
	(synthesize_crossing_events_for_ns_event): Fix warning when
	switching spaces in leopard.

2007-12-04  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2007-12-04  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.12.3 ===

2007-12-04  Richard Hult  <richard@imendio.com>

	Merged from trunk:

	* gdk/quartz/gdkwindow-quartz.c: (_gdk_windowing_window_init):
	Fully initialize the root window, fixes bug #501583.

2007-12-04  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2007-12-04  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk:

	* gtk/gtknotebook.c: Modify the tab-label-destroy fix to not
	crash epiphany.

2007-12-03  Richard Hult  <richard@imendio.com>

	Merged from trunk:

	* gtk/gtkquartz.c: (_gtk_quartz_set_selection_data_for_pasteboard):
	Don't crash when dragging from a source that doesn't support uri
	lists (bug #499868, Paul Davis).

2007-12-03  Richard Hult  <richard@imendio.com>

	Merged from trunk:

	* gdk/quartz/gdkwindow-quartz.c:
	(gdk_window_impl_quartz_begin_paint_region): Don't crash when a
	parent relative bg pixmap is set, and no parent has a bg
	pixmap. Fixes bug #500804.

2007-12-1  Cody Russell  <bratsche@gnome.org>

	Merged from trunk:

	* gtk/gtkpaned.c: (gtk_paned_set_position) [Win32]:      
	On Windows, queue a redraw of child2 whenever we set
	the pane handle position.  This is unfortunately kind
	of hacky, but solves the visual artifacts that were
	occuring on at least certain types of child widgets
	(e.g., text views and tree views) that are inside
	horizontal or vertical panes. (#144269)

2007-11-28  Tor Lillqvist  <tml@novell.com>

	Merged from trunk: 
